Ansbile/argocd-apps/media/radarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      serviceAccountName: radarr
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - "10.43.0.10"
          - "8.8.8.8"
          - "8.8.4.4"
        searches:
          - "media.svc.cluster.local"
          - "svc.cluster.local"
          - "cluster.local"
      nodeSelector:
        kubernetes.io/hostname: media-server
      containers:
        - name: radarr
          image: linuxserver/radarr:latest
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /movies
            - name: download
              mountPath: /downloads
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        - name: movies
          hostPath:
            path: /mnt/media/movies
        - name: download
          hostPath:
            path: /mnt/media/download
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: NodePort
  selector:
    app: radarr
  ports:
    - name: http
      port: 7878
      targetPort: 7878
      nodePort: 7878
