Ansbile/argocd-apps/media/scraparr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraparr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: scraparr
  template:
    metadata:
      labels:
        app: scraparr
    spec:
      nodeSelector:
        kubernetes.io/hostname: media-server
      containers:
        - name: scraparr
          image: ghcr.io/thecfu/scraparr
          ports:
            - containerPort: 7100
          volumeMounts:
            - name: config
              mountPath: /scraparr/config
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: scraparr-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: scraparr
  namespace: media
spec:
  type: NodePort
  selector:
    app: scraparr
  ports:
    - name: http
      port: 7100
      targetPort: 7100
      nodePort: 7100
