Ansbile/argocd-apps/media/sonarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      serviceAccountName: sonarr
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - "10.43.0.10"
          - "8.8.8.8"
          - "8.8.4.4"
        searches:
          - "media.svc.cluster.local"
          - "svc.cluster.local"
          - "cluster.local"
      nodeSelector:
        kubernetes.io/hostname: media-server
      containers:
        - name: sonarr
          image: linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tv
              mountPath: /tv
            - name: download
              mountPath: /downloads
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
        - name: tv
          hostPath:
            path: /mnt/media/tv
        - name: download
          hostPath:
            path: /mnt/media/download
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  type: NodePort
  selector:
    app: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: 8989
      nodePort: 8989
